deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        name: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: Always
        ports:
        - name: http-port
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: "500M"
            cpu: "500m" 
        volumeMounts:
        - name: grafana-nfs-volume
          mountPath: "/var/lib/grafana"
        - name: grafana-datasources
          mountPath: "/etc/grafana/provisioning/datasources"
      volumes:
      - name: grafana-nfs-volume
        persistentVolumeClaim:
          claimName: grafana-pvc
      - name: grafana-datasources
        configMap:
            defaultMode: 420
            name: grafana-datasources
