svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
  - name: http-port
    port: 3000
    targetPort: 3000
